--- a/05-C-Advanced-bayesian-example.Rmd
+++ b/05-C-Advanced-bayesian-example.Rmd
@@ -7,8 +7,7 @@ output: html_document
 
 **Assigned Reading:**
 
-> TBD by students: one example from Chapter 14 in Korner-Nievergelt et al. 2015. *Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.* Elsevier. [link](http://www.sciencedirect.com/science/book/9780128013700) 
-
+> Section 14.2 in Korner-Nievergelt et al. 2015. *Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.* Elsevier. [link](http://www.sciencedirect.com/science/book/9780128013700) 
 
 **Optional Reading:**
 
@@ -35,6 +34,23 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 ```
 
 ### Key Points
+
+We want to fit a zero-inflated Poisson mixed-effects model, but the `hurdle()` and `zeroinfl()` functions from the `pscl` package don't allow random effects. A Bayesian approach is more flexible and will allow us to fit this model.
+
+**The Model**
+
+
+$$z_{it} \sim Bernoulli(\theta_{it})$$
+$$logit(\theta_{it}) = a_1 + a_2 year_t + \epsilon_{nestID[i]}$$
+$$y_{it} \sim Poisson(\lambda_{it}(1 - z_{it}))$$
+
+$$log(\lambda_{it}) = b_1 + b_2 year_t$$
+
+$$\epsilon_{nestID} \sim Norm(0, \sigma_n)$$
+
+
+
+
 
 
 
