--- a/05-B-Bayesian-priors.Rmd
+++ b/05-B-Bayesian-priors.Rmd
@@ -224,9 +224,6 @@ In a separate R script we can start by loading the R package `rstan` and definin
 # Load Stan package
 library(rstan)
 
-# Set working directory - modify as needed
-#setwd("~/Box Sync/Classes/BIO 202/Weekly Material/Week 5")
-
 # Declare data for Stan
 y <- Loyn$ABUND
 x <- Loyn$ALT
@@ -234,10 +231,10 @@ N <- nrow(Loyn)
 datax <- list("N", "x", "y")
 
 # Run Stan
-#mod <- stan(file = "code/05-B.stan", data=datax, chains=3, iter=1000)
+mod <- stan(file = "code/05-B.stan", data=datax, chains=5, iter=1000)
 
 # Save the mod object as an RData file to read in later (so you don't have to redo simulation)
-#save(mod, file = "data/05-B-stanmod.RData")
+save(mod, file = "data/05-B-stanmod.RData")
 
 # Here is another way to first compile the model before sampling from it so that you don't have to re-run the compiling
 
@@ -323,13 +320,13 @@ plot(modSims$beta[,1], modSims$sigma, xlab="beta_0", ylab="sigma")
 plot(modSims$beta[,2], modSims$sigma, xlab="beta_1", ylab="sigma")
 ```
 
-There seems to be correlation between the intercept parameter $\beta_0$ and the slope parameter $\beta_1$, which actually makes sense. This might explain why it took about 500 iterations to convergence on a joint posterior distribution for the parameters. Thankfully, the $\sigma$ parameter does not correlate with any of the other parameters.
+There seems to be a correlation between the intercept parameter $\beta_0$ and the slope parameter $\beta_1$. This is not ideal, and there are ways to deal with this issue (this will be discussed in [Advanced Bayesian model example](https://fukamilab.github.io/BIO202/05-C-Advanced-bayesian-example.html)). Thankfully, the $\sigma$ parameter does not correlate with any of the other parameters.
 
 Normally, we would perform a prior sensitity analysis to see whether the posterior distributions are influenced by the defined prior distributions and maybe modify our priors accordingly until we are fully satisfied with our model (and repeating steps 1-7).
 
 <br>
 
-#### Step 8: Inferences
+#### Step 8: Inference
 
 Now that we have our joint posterior distribution $p(\theta | y)$ we can perform Bayesian inference much like in the previous seminar session (based on similar code).
 
