Added plug for Chapter 17.

--- a/05-C-Advanced-bayesian-example.Rmd
+++ b/05-C-Advanced-bayesian-example.Rmd
@@ -13,7 +13,7 @@ output: html_document
 
 > Chapters 16 and 17 in Korner-Nievergelt et al. 2015. *Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.* Elsevier. [link](http://www.sciencedirect.com/science/book/9780128013700)
 >
-> \* These chapters contain a data analysis checklist and information on how to report analyses in scientific papers.
+> \* These chapters contain a data analysis checklist and information on how to report analyses in scientific papers. Chapter 17 is particularly useful because it gives verbatim text for how you should describe the models that you fit.
 
 ```{r include = FALSE}
 # This code block sets up the r session when the page is rendered to html
